--- a/index.html
+++ b/index.html
@@ -967,7 +967,8 @@
   background-image: url("./bg.png");
 
   /* Full height */
-  height: 100%;
+  height: 100vh;
+  margin-top: -2vh;
 
   /* Center and scale the image nicely */
   background-position: center;
