--- a/index.html
+++ b/index.html
@@ -1616,10 +1616,7 @@
                                 <div class="elementor-element elementor-element-2a96216 elementor-widget elementor-widget-text-editor"
                                     data-id="2a96216" data-element_type="widget" data-widget_type="text-editor.default">
                                     <div class="elementor-widget-container">
-                                        The 0xFreelance platform is reinforced by the community of investors into the
-                                        0xFree token. All investors profit from each platform transaction. Token holders
-                                        will also benefit from discounts on the platform and freelancers holding tokens
-                                        will receive special perks on the platform.</div>
+                                        Investing in EthereumEye Token provides a distinctive opportunity for cryptocurrency enthusiasts and investors. EthereumEye Token is deeply integrated into the Ethereum ecosystem, benefiting from its proven reliability, security, and innovation. This inherent connection with Ethereum establishes EthereumEye Token as a trustworthy investment choice.</div>
                                 </div>
                             </div>
                         </div>
@@ -1630,9 +1627,7 @@
                                 <div class="elementor-element elementor-element-3a674eb elementor-widget elementor-widget-text-editor"
                                     data-id="3a674eb" data-element_type="widget" data-widget_type="text-editor.default">
                                     <div class="elementor-widget-container">
-                                        The community of investors will have the opportunity to help the project grow,
-                                        make key decisions regarding the future of the platform and to be actively
-                                        involved in the development of the utility and the platform.</div>
+                                       Token holders actively shape the project's future through voting mechanisms within the EthereumEye DAO (Decentralized Autonomous Organization). This means that when you invest in EthereumEye Token, you become a pivotal stakeholder in a community-driven ecosystem, where your opinions and contributions hold significant influence.</div>
                                 </div>
                             </div>
                         </div>
