--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
         </div>
         <div class="elementor-element elementor-element-69cb363 e-flex e-con-boxed e-con" data-id="69cb363"
             data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;boxed&quot;}">
-            <div class="e-con-inner">
+            <div style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                 <div class="elementor-element elementor-element-176310e e-con-full e-flex e-con" data-id="176310e"
                     data-element_type="container" data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
                     <div class="elementor-element elementor-element-c491566 e-con-full e-flex e-con" data-id="c491566"
@@ -2345,7 +2345,7 @@
                         <div class="elementor-element elementor-element-5a4e44e animated-slow e-flex e-con-boxed elementor-invisible e-con"
                             data-id="5a4e44e" data-element_type="container"
                             data-settings="{&quot;animation&quot;:&quot;fadeIn&quot;,&quot;content_width&quot;:&quot;boxed&quot;}">
-                            <div class="e-con-inner">
+                            <div style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                                 <div  class="elementor-element elementor-element-bd3b4b5 e-con-full blurred e-flex e-con"
                                     data-id="bd3b4b5" data-element_type="container"
                                     data-settings="{&quot;content_width&quot;:&quot;full&quot;}">
