--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
                         <div class="elementor-widget-container">
                             <div class="elementor-button-wrapper">
                                 <a class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://app.0xfreelance.io/" target="_blank">
+                                    href="" target="_blank">
                                     <span class="elementor-button-content-wrapper">
                                         <span class="elementor-button-text">LAUNCH APP</span>
                                     </span>
