--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                             <div class="elementor-social-icons-wrapper elementor-grid">
                                 <span class="elementor-grid-item">
                                     <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-21fa8f0"
-                                        href="https://t.me/" target="_blank">
+                                        href="https://t.me/EthereumEyeerc20" target="_blank">
                                         <span class="elementor-screen-only">Telegram-plane</span>
                                         <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -884,7 +884,7 @@
                                 </span>
                                 <span class="elementor-grid-item">
                                     <a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-animation-grow elementor-repeater-item-0fa702a"
-                                        href="https://twitter.com/" target="_blank" rel="noopener">
+                                        href="https://twitter.com/EthereumEye" target="_blank" rel="noopener">
                                         <span class="elementor-screen-only"></span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="1208" height="1235"
                                             fill="currentColor" viewBox="0 0 1208 1235">
@@ -2444,7 +2444,7 @@
                              <div class="elementor-social-icons-wrapper elementor-grid" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                                 <span >
                                     <a style="margin: 10px;" class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-grow elementor-repeater-item-21fa8f0"
-                                        href="https://t.me/" target="_blank">
+                                        href="https://t.me/EthereumEyeerc20" target="_blank">
                                         <span class="elementor-screen-only">Telegram-plane</span>
                                         <svg class="e-font-icon-svg e-fab-telegram-plane" viewBox="0 0 448 512"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -2455,7 +2455,7 @@
                                 </span>
                                 <span >
                                     <a style="margin: 10px;" class="elementor-icon elementor-social-icon elementor-social-icon- elementor-animation-grow elementor-repeater-item-0fa702a"
-                                        href="https://twitter.com/" target="_blank" rel="noopener">
+                                        href="https://twitter.com/EthereumEye" target="_blank" rel="noopener">
                                         <span class="elementor-screen-only"></span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="1208" height="1235"
                                             fill="currentColor" viewBox="0 0 1208 1235">
