--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
       mm = String(today.getMonth() + 1).padStart(2, "0"),
       yyyy = today.getFullYear(),
       nextYear = yyyy + 1,
-      dayMonth = "09/15/",
+      dayMonth = "09/19/",
       birthday = dayMonth + yyyy;
   
   today = mm + "/" + dd + "/" + yyyy;
@@ -1104,6 +1104,8 @@
                                   <li  class="li" ><span id="seconds"></span>S</li>
                                 </ul>
                               </div>
+                              <br><br><br>
+                              <p>19 / 09 / 23   9 PM   UTC</p>
                             
                         </div>
 
