--- a/index.html
+++ b/index.html
@@ -1048,49 +1048,46 @@
 }
            </style>
            <script >
-            (function () {
+        (function () {
   const second = 1000,
         minute = second * 60,
         hour = minute * 60,
         day = hour * 24;
 
-  //I'm adding this section so I don't have to keep updating this pen every year :-)
-  //remove this if you don't need it
+  // Get the current date
   let today = new Date(),
-      dd = String(today.getDate()).padStart(2, "0"),
-      mm = String(today.getMonth() + 1).padStart(2, "0"),
-      yyyy = today.getFullYear(),
-      nextYear = yyyy + 1,
-      dayMonth = "09/29/",
-      birthday = dayMonth + yyyy;
-  
-  today = mm + "/" + dd + "/" + yyyy;
-  if (today > birthday) {
-    birthday = dayMonth + nextYear;
+      yyyy = today.getUTCFullYear();
+
+  // Set target to 30th September, 9pm UTC of the current year
+  let countDownDate = new Date(Date.UTC(yyyy, 8, 30, 21, 0, 0)); // Months are 0-indexed, so 8 is September
+
+  // If today's date is past the target, set the target to next year
+  if (today > countDownDate) {
+    yyyy++;
+    countDownDate = new Date(Date.UTC(yyyy, 8, 30, 21, 0, 0));
   }
-  //end
-  
-  const countDown = new Date(birthday).getTime(),
+
+  const countDown = countDownDate.getTime(),
       x = setInterval(function() {    
 
         const now = new Date().getTime(),
               distance = countDown - now;
 
         document.getElementById("days").innerText = Math.floor(distance / (day)),
-          document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
-          document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
-          document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+        document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+        document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+        document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
 
         //do something later when date is reached
         if (distance < 0) {
-          document.getElementById("headline").innerText = "It's my birthday!";
+          document.getElementById("headline").innerText = "It's the time!";
           document.getElementById("countdown").style.display = "none";
           document.getElementById("content").style.display = "block";
           clearInterval(x);
         }
         //seconds
       }, 0)
-  }());
+}());
            </script>
                         <span class="elementor-heading-title elementor-size-xxl" style="font-size: 50px;">ETHEREUM EYE</span>
 
@@ -1105,7 +1102,7 @@
                                 </ul>
                               </div>
                               <br><br><br>
-                              <p>29 / 09 / 23   9 PM   UTC</p>
+                              <p>30 / 09 / 23   9 PM   UTC</p>
                             
                         </div>
 
